[package]
name = "goldfisher-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.8.4"
clap = { version = "3.2.8", features = ["derive"] }
goldfisher = {path = "../goldfisher"}
