[package]
name = "goldfisher-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
log = "0.4.17"
wasm-logger = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
goldfisher = { path = "../goldfisher" }
web-sys = { version = "0.3", features = ["EventTarget", "HtmlSelectElement"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.32"
